--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gatsby-source-filesystem": "^1.4.12",
     "gatsby-transformer-remark": "^1.7.7",
     "glamorous": "^4.9.1",
+    "marksy": "^5.0.0",
     "typography-theme-kirkham": "^0.16.3"
-  }
+  },
+  "devDependencies": {}
 }
