--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "glamorous": "^4.9.1",
     "marksy": "^5.0.0",
     "odex": "^2.0.4",
+    "polished": "^1.8.0",
     "prop-types": "^15.6.0",
     "rc-slider": "^8.3.1",
     "styled-components": "^2.2.1",
