--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-source-filesystem": "^1.4.12",
     "gatsby-transformer-remark": "^1.7.7",
     "glamorous": "^4.9.1",
+    "katex": "^0.9.0-alpha",
     "marksy": "^5.0.0",
     "odex": "^2.0.4",
     "polished": "^1.8.0",
