cleaning up slider UI

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "d3": "^4.11.0",
+    "font-awesome": "^4.7.0",
     "gatsby": "^1.9.36",
     "gatsby-link": "^1.4.1",
     "gatsby-plugin-glamor": "^1.6.7",
     "gatsby-plugin-typography": "^1.7.9",
     "gatsby-source-filesystem": "^1.4.12",
     "gatsby-transformer-remark": "^1.7.7",
-    "glamorous": "^4.9.1",
     "katex": "^0.9.0-alpha",
     "marksy": "^5.0.0",
     "odex": "^2.0.4",
