--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "d3": "^4.11.0",
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.36",
@@ -21,6 +22,7 @@
     "polished": "^1.8.0",
     "prop-types": "^15.6.0",
     "rc-slider": "^8.3.1",
+    "react-animate-on-scroll": "^1.3.2",
     "styled-components": "^2.2.1",
     "typography-theme-alton": "^0.15.10"
   },
