--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.6.0",
     "rc-slider": "^8.3.1",
     "react-animate-on-scroll": "^1.3.2",
+    "react-twitter-widgets": "^1.7.1",
     "styled-components": "^2.2.1",
     "typography-theme-alton": "^0.15.10"
   },
