--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "deploy": "gatsby build && gh-pages -d public --branch master",
   },
   "dependencies": {
     "animate.css": "^3.5.2",
@@ -27,5 +28,7 @@
     "styled-components": "^2.2.1",
     "typography-theme-alton": "^0.15.10"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
+  }
 }
