--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "deploy": "gatsby build && gh-pages -d public --branch master",
+    "deploy": "gatsby build && gh-pages -d public --branch master"
   },
   "dependencies": {
     "animate.css": "^3.5.2",
