--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Gatsby hello world starter",
   "license": "MIT",
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H localhost",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "deploy": "gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved"
@@ -14,6 +14,7 @@
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.36",
     "gatsby-link": "^1.4.1",
+    "gatsby-plugin-google-analytics": "^1.0.12",
     "gatsby-plugin-typography": "^1.7.9",
     "gatsby-source-filesystem": "^1.4.12",
     "gatsby-transformer-remark": "^1.7.7",
