--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "polished": "^1.8.0",
     "prop-types": "^15.6.0",
     "rc-slider": "^8.3.1",
-    "react-animate-on-scroll": "ernerock/react-animate-on-scroll",
+    "react-animate-on-scroll": "^1.4.0",
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^2.2.1",
     "typography-theme-alton": "^0.15.10"
