--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "develop": "gatsby develop -H localhost",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "deploy": "gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved"
+    "deploy": "gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved && aws-cloudfront-invalidate $npm_config_distribution_id"
   },
   "dependencies": {
     "animate.css": "^3.5.2",
+    "aws-cloudfront-invalidate": "^0.1.3",
     "d3": "^4.11.0",
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.36",
