--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^1.9.36",
     "gatsby-link": "^1.4.1",
     "gatsby-plugin-google-analytics": "^1.0.12",
+    "gatsby-plugin-react-helmet": "^2.0.1",
     "gatsby-plugin-typography": "^1.7.9",
     "gatsby-source-filesystem": "^1.4.12",
     "gatsby-transformer-remark": "^1.7.7",
