--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "Gatsby hello world starter",
   "license": "MIT",
   "scripts": {
-    "develop": "gatsby develop -H localhost",
-    "build": "gatsby build",
+    "develop": "GATSBY_BASE_URL='http://localhost:8000' gatsby develop -H localhost",
+    "build": "GATSBY_BASE_URL='https://mattlane.us' gatsby build",
     "serve": "gatsby serve",
-    "deploy": "gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved && aws-cloudfront-invalidate $npm_config_distribution_id"
+    "deploy": "GATSBY_BASE_URL='https://mattlane.us' gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved && aws-cloudfront-invalidate $npm_config_distribution_id"
   },
   "dependencies": {
     "animate.css": "^3.5.2",
@@ -15,8 +15,10 @@
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.36",
     "gatsby-link": "^1.4.1",
+    "gatsby-plugin-feed": "^1.3.13",
     "gatsby-plugin-google-analytics": "^1.0.12",
     "gatsby-plugin-react-helmet": "^2.0.1",
+    "gatsby-plugin-sitemap": "^1.2.5",
     "gatsby-plugin-typography": "^1.7.9",
     "gatsby-source-filesystem": "^1.4.12",
     "gatsby-transformer-remark": "^1.7.7",
