--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rc-slider": "^8.3.1",
     "react-animate-on-scroll": "^1.4.0",
     "react-helmet": "^5.2.0",
+    "react-move": "^2.6.0",
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^2.2.1",
     "typography-theme-alton": "^0.15.10"
