--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "animate.css": "^3.5.2",
     "aws-cloudfront-invalidate": "^0.1.3",
     "d3": "^4.11.0",
+    "d3-force-bounce": "^0.5.5",
+    "d3-force-surface": "^0.5.5",
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.36",
     "gatsby-link": "^1.4.1",
@@ -30,7 +32,6 @@
     "rc-slider": "^8.3.1",
     "react-animate-on-scroll": "^1.4.0",
     "react-helmet": "^5.2.0",
-    "react-move": "^2.6.0",
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^2.2.1",
     "typography-theme-alton": "^0.15.10"
