--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^3.5.2",
     "aws-cloudfront-invalidate": "^0.1.3",
     "d3": "^4.12.2",
+    "d3-fetch": "^1.0.1",
     "d3-force-bounce": "^0.5.5",
     "d3-force-surface": "^0.5.5",
     "font-awesome": "^4.7.0",
