--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-select": "^1.2.1",
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^2.2.1",
+    "topojson": "^3.0.2",
     "typography-theme-alton": "^0.15.10"
   },
   "devDependencies": {
