--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
     "deploy": "GATSBY_BASE_URL='https://mattlane.us' gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved && aws-cloudfront-invalidate $npm_config_distribution_id"
   },
   "dependencies": {
-    "animate.css": "^3.5.2",
+    "animate.css": "^3.6.1",
     "aws-cloudfront-invalidate": "^0.1.3",
-    "d3": "^4.12.2",
+    "d3": "^4.13.0",
     "d3-fetch": "^1.0.1",
     "d3-force-bounce": "^0.5.5",
     "d3-force-surface": "^0.5.5",
     "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.36",
-    "gatsby-link": "^1.4.1",
-    "gatsby-plugin-feed": "^1.3.13",
-    "gatsby-plugin-google-analytics": "^1.0.12",
-    "gatsby-plugin-react-helmet": "^2.0.1",
-    "gatsby-plugin-sitemap": "^1.2.5",
-    "gatsby-plugin-typography": "^1.7.9",
-    "gatsby-source-filesystem": "^1.4.12",
-    "gatsby-transformer-remark": "^1.7.7",
-    "katex": "^0.9.0-alpha",
+    "gatsby": "^1.9.214",
+    "gatsby-link": "^1.6.37",
+    "gatsby-plugin-feed": "^1.3.18",
+    "gatsby-plugin-google-analytics": "^1.0.19",
+    "gatsby-plugin-react-helmet": "^2.0.5",
+    "gatsby-plugin-sitemap": "^1.2.13",
+    "gatsby-plugin-typography": "^1.7.14",
+    "gatsby-source-filesystem": "^1.5.23",
+    "gatsby-transformer-remark": "^1.7.33",
+    "katex": "^0.9.0",
     "marksy": "^6.0.3",
     "odex": "^2.0.4",
-    "polished": "^1.8.0",
+    "polished": "^1.9.2",
     "prop-types": "^15.6.0",
-    "rc-slider": "^8.3.1",
-    "react-animate-on-scroll": "^1.4.0",
+    "rc-slider": "^8.6.0",
+    "react-animate-on-scroll": "^1.6.2",
     "react-helmet": "^5.2.0",
-    "react-move": "^2.6.0",
+    "react-move": "^2.7.0",
     "react-select": "^1.2.1",
     "react-twitter-widgets": "^1.7.1",
-    "styled-components": "^2.2.1",
+    "styled-components": "^2.4.0",
     "topojson": "^3.0.2",
     "typography-theme-alton": "^0.15.10"
   },
