--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-fetch": "^1.1.0",
     "d3-force-bounce": "^0.5.5",
     "d3-force-surface": "^0.5.5",
+    "d3-transition": "^1.1.1",
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.231",
     "gatsby-link": "^1.6.39",
