--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "develop": "GATSBY_BASE_URL='http://localhost:8000' gatsby develop -H localhost",
     "build": "GATSBY_BASE_URL='https://mattlane.us' gatsby build",
     "serve": "gatsby serve",
-    "deploy": "GATSBY_BASE_URL='https://mattlane.us' gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved && aws-cloudfront-invalidate $npm_config_distribution_id"
+    "deploy": "GATSBY_BASE_URL='https://mattlane.us' gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved && aws-cloudfront-invalidate $npm_config_distribution_id",
+    "test": "jest"
   },
   "dependencies": {
     "animate.css": "^3.6.1",
@@ -43,6 +44,8 @@
     "typography-theme-alton": "^0.15.10"
   },
   "devDependencies": {
+    "babel-jest": "^22.4.3",
+    "jest": "^22.4.3",
     "s3-deploy": "^0.8.0"
   }
 }
