--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "babel-jest": "^22.4.3",
+    "babel-plugin-module-resolver": "^3.1.1",
     "jest": "^22.4.3",
     "s3-deploy": "^0.8.0"
   }
