--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-typography": "^1.7.18",
     "gatsby-source-filesystem": "^1.5.34",
     "gatsby-transformer-remark": "^1.7.40",
+    "jstat": "^1.7.1",
     "katex": "^0.9.0",
     "marksy": "^6.0.3",
     "odex": "^2.0.4",
