upgrading all dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "mattlane.us",
   "description": "Matt Lane personal Gatsby site",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/mmmaaatttttt/personal-site.git"
+  },
   "license": "MIT",
   "scripts": {
     "develop": "GATSBY_BASE_URL='http://localhost:8000' gatsby develop -H localhost",
@@ -11,51 +15,55 @@
     "test:clear": "npx jest --clearCache"
   },
   "dependencies": {
-    "animate.css": "^3.6.1",
+    "animate.css": "^3.7.0",
     "aws-cloudfront-invalidate": "^0.1.3",
-    "d3": "^4.13.0",
-    "d3-fetch": "^1.1.0",
-    "d3-force-bounce": "^0.5.5",
-    "d3-force-surface": "^0.5.5",
-    "d3-transition": "^1.1.1",
-    "gatsby": "^1.9.273",
-    "gatsby-link": "^1.6.41",
-    "gatsby-plugin-feed": "^1.3.21",
-    "gatsby-plugin-google-analytics": "^1.0.31",
-    "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-plugin-resolve-src": "^1.1.3",
-    "gatsby-plugin-sitemap": "^1.2.23",
-    "gatsby-plugin-typography": "^1.7.18",
-    "gatsby-source-filesystem": "^1.5.34",
-    "gatsby-transformer-remark": "^1.7.40",
+    "d3": "^5.7.0",
+    "d3-fetch": "^1.1.2",
+    "d3-force-bounce": "^0.5.6",
+    "d3-force-surface": "^0.5.6",
+    "d3-transition": "^1.1.3",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "gatsby": "^2.0.91",
+    "gatsby-link": "^2.0.8",
+    "gatsby-plugin-feed": "^2.0.11",
+    "gatsby-plugin-google-analytics": "^2.0.9",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-resolve-src": "^1.1.4",
+    "gatsby-plugin-sitemap": "^2.0.4",
+    "gatsby-plugin-typography": "^2.2.5",
+    "gatsby-source-filesystem": "^2.0.16",
+    "gatsby-transformer-remark": "^2.2.0",
     "jstat": "^1.7.1",
-    "katex": "^0.9.0",
-    "marksy": "^6.0.3",
+    "katex": "^0.10.0",
+    "marksy": "^6.1.0",
     "odex": "^2.0.4",
-    "polished": "^1.9.2",
-    "prop-types": "^15.6.1",
-    "rc-slider": "^8.6.1",
-    "react-animate-on-scroll": "^1.6.2",
+    "polished": "^2.3.3",
+    "prop-types": "^15.6.2",
+    "rc-slider": "^8.6.4",
+    "react": "^16.7.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
-    "react-move": "^2.7.0",
-    "react-redux": "^5.0.7",
-    "react-select": "^1.2.1",
+    "react-move": "^2.8.0",
+    "react-redux": "^6.0.0",
+    "react-select": "^2.2.0",
     "react-twitter-widgets": "^1.7.1",
-    "redux": "^4.0.0",
-    "styled-components": "^2.4.0",
+    "react-typography": "^0.16.18",
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.3",
     "topojson": "^3.0.2",
-    "typography-theme-alton": "^0.15.10"
+    "typography": "^0.16.18",
+    "typography-theme-alton": "^0.16.18"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
-    "babel-jest": "^22.4.3",
+    "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-15": "^1.2.0",
-    "enzyme-to-json": "^3.3.3",
-    "esm": "^3.0.36",
-    "jest": "^22.4.3",
-    "react-test-renderer": "^15.6.2",
-    "s3-deploy": "^0.8.0"
+    "enzyme": "^3.8.0",
+    "enzyme-to-json": "^3.3.5",
+    "esm": "^3.0.84",
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.7.0",
+    "s3-deploy": "^1.2.0"
   }
 }
