--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test:clear": "npx jest --clearCache"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^0.16.6",
+    "@mdx-js/tag": "^0.16.6",
     "animate.css": "^3.7.0",
     "aws-cloudfront-invalidate": "^0.1.3",
     "d3": "^5.7.0",
@@ -25,6 +27,7 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "gatsby": "^2.0.91",
     "gatsby-link": "^2.0.8",
+    "gatsby-mdx": "^0.3.3",
     "gatsby-plugin-feed": "^2.0.11",
     "gatsby-plugin-google-analytics": "^2.0.9",
     "gatsby-plugin-react-helmet": "^3.0.5",
@@ -32,10 +35,8 @@
     "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-plugin-typography": "^2.2.5",
     "gatsby-source-filesystem": "^2.0.16",
-    "gatsby-transformer-remark": "^2.2.0",
     "jstat": "^1.7.1",
     "katex": "^0.10.0",
-    "marksy": "^6.1.0",
     "odex": "^2.0.4",
     "polished": "^2.3.3",
     "prop-types": "^15.6.2",
