--- a/package.json
+++ b/package.json
@@ -57,12 +57,16 @@
     "typography-theme-alton": "^0.16.18"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "@fortawesome/fontawesome-free": "^5.6.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-preset-gatsby": "^0.1.6",
     "enzyme": "^3.8.0",
     "enzyme-to-json": "^3.3.5",
     "esm": "^3.0.84",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "react-test-renderer": "^16.7.0",
     "s3-deploy": "^1.2.0"
