--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serve": "gatsby serve",
     "deploy": "GATSBY_BASE_URL='https://mattlane.us' gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved && aws-cloudfront-invalidate $npm_config_distribution_id",
     "test": "jest",
+    "test:watch": "jest --watch",
     "test:clear": "npx jest --clearCache"
   },
   "dependencies": {
