--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "license": "MIT",
   "scripts": {
-    "develop": "GATSBY_BASE_URL='http://localhost:8000' gatsby develop -H localhost",
     "build": "GATSBY_BASE_URL='https://mattlane.us' gatsby build",
-    "serve": "gatsby serve",
     "deploy": "GATSBY_BASE_URL='https://mattlane.us' gatsby build && s3-deploy './public/**' --cwd './public/' --region us-east-1 --bucket mattlane.us --deleteRemoved && aws-cloudfront-invalidate $npm_config_distribution_id",
+    "develop": "GATSBY_BASE_URL='http://localhost:8000' gatsby develop -H localhost",
+    "indices": "create-index ./src/story_components/{atoms,molecules,organisms,templates,}",
+    "serve": "gatsby serve",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:clear": "npx jest --clearCache"
@@ -27,6 +28,7 @@
     "d3-transition": "^1.1.3",
     "enzyme-adapter-react-16": "^1.7.1",
     "gatsby": "^2.0.91",
+    "gatsby-image": "^2.0.26",
     "gatsby-link": "^2.0.8",
     "gatsby-mdx": "^0.3.3",
     "gatsby-plugin-feed": "^2.0.11",
@@ -64,6 +66,7 @@
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-gatsby": "^0.1.6",
+    "create-index": "^2.3.0",
     "enzyme": "^3.8.0",
     "enzyme-to-json": "^3.3.5",
     "esm": "^3.0.84",
