--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "gatsby-plugin-google-analytics": "^2.0.9",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-resolve-src": "^2.0.0-beta.1",
+    "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-plugin-typography": "^2.2.5",
     "gatsby-source-filesystem": "^2.0.16",
+    "gatsby-transformer-sharp": "^2.1.10",
     "jstat": "^1.7.1",
     "katex": "^0.10.0",
     "odex": "^2.0.4",
