--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-plugin-typography": "^2.2.5",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-source-filesystem": "^2.0.16",
+    "gatsby-transformer-csv": "^2.0.6",
     "gatsby-transformer-sharp": "^2.1.10",
     "jstat": "^1.7.1",
     "katex": "^0.10.0",
