--- a/package.json
+++ b/package.json
@@ -17,65 +17,72 @@
     "test:clear": "npx jest --clearCache"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^0.16.8",
-    "@mdx-js/tag": "^0.16.8",
+    "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/tag": "^0.18.0",
+    "ajv": "^6.10.0",
     "animate.css": "^3.7.0",
     "aws-cloudfront-invalidate": "^0.1.3",
-    "d3": "^5.9.0",
+    "d3": "^5.9.1",
     "d3-force-bounce": "^0.5.6",
     "d3-force-surface": "^0.5.6",
     "d3-transition": "^1.2.0",
-    "enzyme-adapter-react-16": "^1.9.1",
-    "gatsby": "^2.0.118",
-    "gatsby-image": "^2.0.29",
-    "gatsby-link": "^2.0.10",
-    "gatsby-mdx": "^0.3.5",
-    "gatsby-plugin-feed": "^2.0.13",
-    "gatsby-plugin-google-analytics": "^2.0.13",
-    "gatsby-plugin-react-helmet": "^3.0.6",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "gatsby": "^2.1.27",
+    "gatsby-image": "^2.0.31",
+    "gatsby-link": "^2.0.14",
+    "gatsby-mdx": "^0.4.2",
+    "gatsby-plugin-feed": "^2.0.14",
+    "gatsby-plugin-google-analytics": "^2.0.16",
+    "gatsby-plugin-react-helmet": "^3.0.8",
     "gatsby-plugin-resolve-src": "^2.0.0",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-plugin-sitemap": "^2.0.5",
-    "gatsby-plugin-typography": "^2.2.7",
-    "gatsby-remark-images": "^3.0.3",
-    "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-plugin-sharp": "^2.0.25",
+    "gatsby-plugin-sitemap": "^2.0.6",
+    "gatsby-plugin-styled-components": "^3.0.6",
+    "gatsby-plugin-typography": "^2.2.8",
+    "gatsby-remark-images": "^3.0.6",
+    "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-csv": "^2.0.7",
-    "gatsby-transformer-sharp": "^2.1.13",
+    "gatsby-transformer-sharp": "^2.1.15",
+    "graphql": "^14.1.1",
     "jstat": "^1.7.1",
-    "katex": "^0.10.0",
+    "katex": "^0.10.1",
+    "lodash": "^4.17.11",
     "odex": "^2.0.4",
     "polished": "^2.3.3",
-    "prop-types": "^15.6.2",
-    "rc-slider": "^8.6.5",
-    "react": "^16.8.1",
+    "prop-types": "^15.7.2",
+    "rc-slider": "^8.6.6",
+    "react": "^16.8.4",
     "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-move": "^2.9.1",
-    "react-redux": "^6.0.0",
-    "react-select": "^2.3.0",
+    "react-redux": "^6.0.1",
+    "react-select": "^2.4.1",
     "react-twitter-widgets": "^1.7.1",
-    "react-typography": "^0.16.18",
+    "react-typography": "^0.16.19",
     "redux": "^4.0.1",
     "styled-components": "^4.1.3",
     "topojson": "^3.0.2",
-    "typography": "^0.16.18",
-    "typography-theme-alton": "^0.16.18"
+    "typography": "^0.16.19",
+    "typography-theme-alton": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@fortawesome/fontawesome-free": "^5.7.1",
+    "@babel/core": "^7.3.4",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "babel-plugin-module-resolver": "^3.1.3",
-    "babel-preset-gatsby": "^0.1.7",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-preset-gatsby": "^0.1.8",
     "create-index": "^2.4.0",
-    "enzyme": "^3.8.0",
+    "enzyme": "^3.9.0",
     "enzyme-to-json": "^3.3.5",
-    "esm": "^3.2.4",
+    "esm": "^3.2.14",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "react-test-renderer": "^16.8.1",
-    "s3-deploy": "^1.2.1"
+    "react-test-renderer": "^16.8.4",
+    "s3-deploy": "^1.3.0"
+  },
+  "resolutions": {
+    "graphql": "14.1.1"
   }
 }
