--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^16.8.4",
     "react-draggable": "^3.3.0",
     "react-helmet": "^5.2.0",
+    "react-mailchimp-subscribe": "^2.1.0",
     "react-measure": "^2.3.0",
     "react-move": "^2.9.1",
     "react-redux": "^6.0.1",
