--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "^0.20.3",
-    "@mdx-js/tag": "^0.18.0",
+    "@mdx-js/react": "^1.5.8",
     "ajv": "^6.12.1",
     "animate.css": "^3.7.2",
     "aws-cloudfront-invalidate": "^0.1.3",
@@ -30,9 +30,9 @@
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
     "gatsby-link": "^2.3.4",
-    "gatsby-mdx": "^0.4.5",
     "gatsby-plugin-feed": "^2.4.3",
     "gatsby-plugin-google-analytics": "^2.2.4",
+    "gatsby-plugin-mdx": "^1.1.9",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-resolve-src": "^2.0.0",
     "gatsby-plugin-sharp": "^2.5.6",
