--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "test:clear": "npx jest --clearCache"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/mdx": "^1.5.8",
     "@mdx-js/react": "^1.5.8",
+    "acorn": "^6.4.1",
     "ajv": "^6.12.1",
     "animate.css": "^3.7.2",
     "aws-cloudfront-invalidate": "^0.1.3",
