--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
     "gatsby-link": "^2.3.4",
-    "gatsby-plugin-feed": "^2.4.3",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-google-analytics": "^2.2.4",
     "gatsby-plugin-mdx": "^1.1.9",
     "gatsby-plugin-react-helmet": "^3.2.4",
@@ -85,8 +85,5 @@
     "jest": "^23.6.0",
     "react-test-renderer": "^16.13.1",
     "s3-deploy": "^1.4.0"
-  },
-  "resolutions": {
-    "graphql": "14.1.1"
   }
 }
