--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "d3-force-bounce": "^0.5.7",
     "d3-force-surface": "^0.5.7",
     "d3-transition": "^1.3.2",
-    "enzyme-adapter-react-16": "^1.15.2",
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
     "gatsby-link": "^2.3.4",
@@ -73,16 +72,15 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-gatsby": "^0.1.11",
     "create-index": "^2.5.0",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.4.4",
-    "esm": "^3.2.25",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
+    "jest": "^25.3.0",
     "react-test-renderer": "^16.13.1",
     "s3-deploy": "^1.4.0"
   }
