--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "d3": "^5.16.0",
     "d3-force-bounce": "^0.5.7",
     "d3-force-surface": "^0.5.7",
+    "d3-interpolate": "^1.4.0",
     "d3-transition": "^1.3.2",
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
